[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-4-alan"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Alan Blanchet", email = "alan@alan-blanchet.fr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.4.15",
    "ale-py>=0.9.1",
    "click>=8.1.7",
    "datasets>=3.0.0",
    "diffusers>=0.30.3",
    "einops>=0.8.0",
    "graphviz>=0.20.3",
    "gymnasium[accept-rom-license,ale,classic-control]>=0.29.1",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "lightning>=2.4.0",
    "neptune>=1.11.1",
    "optimum>=1.22.0",
    "plotly>=5.24.1",
    "pydantic>=2.9.1",
    "questionary>=2.0.1",
    "random-word>=1.0.11",
    "rich>=13.8.1",
    "tensorboard>=2.17.1",
    "tensorboardx>=2.6.2.2",
    "timm>=1.0.9",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "transformers>=4.44.2",
]


[tool.setuptools]
packages = { find = { where = ["src"] } }


[project.scripts]
ai = "ai.cli.ai:main"
