[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-4-alan"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Alan Blanchet", email = "alan@alan-blanchet.fr" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.1.1",
    "albumentations>=1.4.15",
    "ale-py>=0.8.1",
    "click-extra>=4.10.0",
    "click>=8.1.7",
    "datasets>=3.0.0",
    "deepmerge>=2.0",
    "devtools>=0.12.2",
    "diffusers>=0.31.0",
    "easydict>=1.13",
    "einops>=0.8.0",
    "faster-coco-eval>=1.6.0",
    "graphviz>=0.20.3",
    "gymnasium[all]>=1.0.0",
    "ipykernel>=6.29.5",
    "joblib>=1.4.2",
    "lightning>=2.4.0",
    "methodtools>=0.4.7",
    "neptune>=1.11.1",
    "optimum>=1.22.0",
    "plotly>=5.24.1",
    "pycocotools>=2.0.8",
    "pydantic>=2.9.1",
    "questionary>=2.0.1",
    "random-word>=1.0.11",
    "rich>=13.8.1",
    "tensorboard>=2.17.1",
    "tensorboardx>=2.6.2.2",
    "timm>=1.0.9",
    "torch>=2.4.1",
    "torchmetrics>=1.4.2",
    "torchvision>=0.19.1",
    "transformers>=4.44.2",
    "griffe-pydantic>=1.1.0",
    "mkdocs-material>=9.5.50",
    "mkdocs>=1.6.1",
    "mkdocstrings-python>=1.13.0",
    "griffe-fieldz>=0.2.1",
    "mkdocstrings>=0.27.0",
    "griffe>=1.5.5",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkinit>=1.1.0",
    "awkward>=2.7.4",
    "pandoc>=2.4",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
"**/__init__.py" = ["F401", "F403"]

[tool.ruff]
exclude = ["*.ipynb"]
ignore = ["E741"]


[tool.setuptools]
packages = { find = { where = ["src"] } }


[project.scripts]
ai = "ai.cli.ai:main"
